--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/Kalitsune/open-discord-translator#readme",
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.0",
+    "axios": "^1.4.0",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1"
   },
