--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.4.0",
+    "discord-api-types": "^0.37.52",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1"
   },
