🗑 /send command now has a delete button

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ TOKEN="your token here" # https://discord.com/developers/applications
 GUILD="" # if set, the commands will only be available in this guild whose ID is linked here
 SKIP_COMMAND_VALIDATION="false" # if set to true, the bot will not check if the commands are up to date
 ACCENT_COLOR="Blurple" # the color of the embeds
-DELETE_BUTTON_TIMEOUT="10" # the time in ms before the delete button disappears
+DELETE_BUTTON_TIMEOUT="10" # the time in s before the delete button disappears (leave empty for infinite)
 TRANSLATION_API_DRIVER="google" # paid_google.js or deepl
 GOOGLE_API_KEY="" # your google API key (paid google driver)
 DEEPL_AUTH_KEY="" # your deepl auth key (deepl driver)
