--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ GUILD="" # if set, the commands will only be available in this guild whose ID is
 SKIP_COMMAND_VALIDATION="false" # if set to true, the bot will not check if the commands are up to date
 ACCENT_COLOR="Blurple" # the color of the embeds
 DELETE_BUTTON_TIMEOUT="10" # the time in s before the delete button disappears (leave empty for infinite)
-TRANSLATION_API_DRIVER="google" # paid_google.js or deepl
+TRANSLATION_API_DRIVER="google_search" # google_search, google_cloud or deepl
 SELECTED_LANGUAGES="en,es,fr,de,it,ja,ko,pt,ru,zh-CN,zh-TW,pl,nl,sv,ar,cs,da,fi,el,hi,hu,id,no,la,ro," # the languages you want to translate to and from (comma separated)
 GOOGLE_API_KEY="" # your google API key (paid google driver)
 DEEPL_API_KEY="" # your deepl auth key (deepl driver)
