💽 DB driver and replicas management

--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ TRANSLATION_API_DRIVER="google_search" # google_search, google_cloud or deepl
 SELECTED_LANGUAGES="en,es,fr,de,it,ja,ko,pt,ru,zh-CN,zh-TW,pl,nl,sv,ar,cs,da,fi,el,hi,hu,id,no,la,ro," # the languages you want to translate to and from (comma separated)
 GOOGLE_API_KEY="" # your google API key (paid google driver)
 DEEPL_API_KEY="" # your deepl auth key (deepl driver)
-DATABASE_PATH="database.sqlite" # the path to the database file
+SQLITE_PATH="database.sqlite" # the path to the database file
 DATABASE_DRIVER="sqlite" # sqlite is the only driver supported for now but feel free to add more
