--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "discord-api-types": "^0.37.53",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
+    "dotenv-parse-variables": "^2.0.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
