--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/localizations/configs/
-    translation: '%original_path%'
+    translation: /src/localizations/configs/%locale%/%original_file_name%
