--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /src/localizations/configs/**.json
+  - source: /src/localizations/configs/en.json
     translation: /src/localizations/configs/%locale%.json
