--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/localizations/configs/en.json
-    translation: /src/localizations/configs/%locale%.json
+    translation: /src/localizations/configs/%two_letters_code%.json
