--- a/.env
+++ b/.env
@@ -12,9 +12,10 @@ SKIP_COMMAND_VALIDATION="false" # if set to true, the bot will not check if the 
 ACCENT_COLOR="Blurple" # the color of the embeds
 DELETE_BUTTON_TIMEOUT="10" # the time in s before the delete button disappears (leave empty for infinite)
 ENABLE_REPLICAS="false" # if set to true, the bot will translate channels message as defined in the db by the `/replicas` command ⚠ NEEDS THE MESSAGE_CONTENT PRIVILEGED INTENT ⚠
-TRANSLATION_API_DRIVER="google_search" # google_search, google_cloud or deepl
+TRANSLATION_API_DRIVER="google_search" # google_search, google_cloud, libretranslate or deepl
 SELECTED_LANGUAGES="en,es,fr,de,it,ja,ko,pt,ru,zh-CN,zh-TW,pl,nl,sv,ar,cs,da,fi,el,hi,hu,id,no,la,ro," # the languages you want to translate to and from (comma separated)
 GOOGLE_API_KEY="" # your google API key (paid google driver)
 DEEPL_API_KEY="" # your deepl auth key (deepl driver)
+LIBRETRANSLATE_URL="" # your libretranslate api url (libretranslate driver) (e.g. http://localhost:6969)
 SQLITE_PATH="database.sqlite" # the path to the database file
 DATABASE_DRIVER="sqlite" # sqlite is the only driver supported for now but feel free to add more
